Closes #112 Error Handling and Recovery, Closes #120 Application Packaging, Closes #128 Write Installation Guide.